<resources>
    <string name="app_name">lb02</string>
    <string name="title_activity_login2">LoginActivity2</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>

    <string name="log_in">Log In</string>
    <string name="register">Register</string>
    <string name="have_acc">Already registered? Sign in here</string>
    <string name="login">Login</string>
    <string name="registration">Registration</string>

    <string name="enter_name">Enter firstname</string>
    <string name="enter_login">Enter login</string>
    <string name="enter_password">Enter password</string>
    <string name="delete">Delete</string>
    <string name="logout">Log out</string>

    <string name="change_theme">Change theme</string>
</resources>