<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/layout_reg"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/registration"
        android:textSize="26sp"
        android:layout_marginBottom="15dp"/>
    <EditText
        android:id="@+id/et_reg_name"
        android:layout_width="200dp"
        android:layout_height="70dp"
        android:paddingTop="26dp"
        android:layout_gravity="center"
        android:hint="@string/enter_name"
        android:autofillHints=""
        android:inputType="text"/>
    <EditText
        android:id="@+id/et_reg_login"
        android:layout_width="200dp"
        android:layout_height="70dp"
        android:paddingTop="26dp"
        android:layout_gravity="center"
        android:hint="@string/enter_login"
        android:autofillHints=""
        android:inputType="text"/>
    <EditText
        android:id="@+id/et_reg_pass"
        android:layout_width="200dp"
        android:layout_height="70dp"
        android:paddingTop="26dp"
        android:layout_gravity="center"
        android:hint="@string/enter_password"
        android:autofillHints=""
        android:inputType="text"/>

    <Button
        android:id="@+id/btn_reg_register"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="10dp"
        android:text="@string/register"/>
    <Button
        android:id="@+id/btn_reg_cancel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/have_acc"
        android:textColor="@color/material_dynamic_neutral50"
        android:textStyle="italic"
        style="@style/Widget.AppCompat.Button.Borderless.Colored"/>
</LinearLayout>